syntax = "proto3";

package com.aws.protobuf;
option java_outer_classname = "DealMessages";

message DealEvent {
  oneof event {
    DealExecutedEvent deal_executed = 1;
    DealCancelledEvent deal_cancelled = 2;
  }
}

message DealExecutedEvent {
  int64 deal_id = 1;
  int64 buy_order_id = 2;
  int64 sale_order_id = 3;
  int64 buyer_id = 4;
  int64 seller_id = 5;
  int64 buy_portfolio_id = 6;
  int64 sale_portfolio_id = 7;
  int64 count = 8;
  string lot_price = 9;
  int64 instrument_id = 10;
}

message DealCancelledEvent {
  int64 deal_id = 1;
  int64 buyer_id = 2;
  int64 seller_id = 3;
  int64 buy_portfolio_id = 4;
  int64 sale_portfolio_id = 5;
  int64 count = 6;
  string lot_price = 7;
  int64 instrument_id = 8;
}